<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:padding="16dp">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:paddingEnd="15dp"
                android:paddingStart="0dp"
                android:text="@string/name"
                android:textAppearance="?attr/textAppearanceSubtitle1"
                android:textColor="?android:attr/textColorSecondary" />

            <TextView
                android:id="@+id/drug_name_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:textAppearance="?attr/textAppearanceBody1"
                android:textColor="?android:attr/textColorSecondary" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:paddingEnd="15dp"
                android:paddingStart="0dp"
                android:text="@string/dosage"
                android:textAppearance="?attr/textAppearanceSubtitle1"
                android:textColor="?android:attr/textColorSecondary" />

            <TextView
                android:id="@+id/drug_dosage_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:textAppearance="?attr/textAppearanceBody1"
                android:textColor="?android:attr/textColorSecondary" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:paddingEnd="15dp"
                android:paddingStart="0dp"
                android:text="@string/stock"
                android:textAppearance="?attr/textAppearanceSubtitle1"
                android:textColor="?android:attr/textColorSecondary" />

            <TextView
                android:id="@+id/drug_stock_amount_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:textAppearance="?attr/textAppearanceBody1"
                android:textColor="?android:attr/textColorSecondary" />
        </TableRow>
    </TableLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/drug_count_text_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add_to_stock">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/drug_count_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/user_short_name_text_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/employee">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/user_short_name_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

</LinearLayout>