<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/drug_dosage_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="16dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/employee_text_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/employee">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/employee_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/patient_text_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/patient">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/patient_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/amount_text_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/amount">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/amount_text"
            android:layout_width="50dp"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/drug_unit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    </com.google.android.material.textfield.TextInputLayout>

</LinearLayout>